// version of protocol buffer used
syntax = "proto3";

option go_package = "shopping_list.microservice/proto_generated";
import "google/protobuf/timestamp.proto";

// package name for the buffer will be used later
package shopping_list;

// service which can be executed
// Important: each method can have only one input and one output!!!
service ShoppingList {
  rpc AddProductToList(Product) returns (Response);
  rpc RemoveProductFromList(ProductRemove) returns (Response);
  rpc UpdateProductInList(ProductUpdate) returns (Response);
  rpc AddProductToCart(ProductUpdate) returns (Response);
  rpc RemoveProductFromCart(ProductUpdate) returns (Response);
  rpc GetList(GetListRequest) returns (ProductList);
  rpc BuyAllProductsInCart(ProductList) returns (Response);
}

enum ProductType {
  Meat = 0;
  Fish = 1;
  Fruit = 2;
  Vegetable = 3;
  Drink = 4;
  Other = 5;
}

enum Unit {
  Bottle = 0;
  Packet = 1;
  Kg = 2;
  Grams = 3;
}

message ProductUpdate {
  string productId = 1;
  string field = 2; // for update
  string value = 3; // for update
}

message ProductRemove {
    string productName = 1;
}

//message ProductId {
//  string productId = 1;
//  string productName = 2;
//}

// argument
message Product {
  string productName = 1;
  ProductType type = 2;
  Unit unit = 3;
  int32 quantity = 4;
  bool addedToCart = 5;
  bool checkedOut = 6;
  google.protobuf.Timestamp expiration = 7;
}

message GetListRequest {
//     int64 listId = 1;
}
// shopping List
message ProductList {
    // ListId id = 1;
    string name = 1;
    repeated Product products = 2; // list of products
}

message Response {
  string msg = 1; // "ok" se ha successo, altrimenti l'errore e il messaggio di errore.
}